libs/extractor/tests/snapshots/all_tests__extract_keyframs_literal.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { keyframes } from \"@devup-ui/core\";\nkeyframes({\n  from: `\n  background-color: red;\n  `,\n  to: `\n  background-color: blue;\n  `\n})\n\nkeyframes`\n  from {\n    background-color: red;\n  }\n  to {\n    background-color: blue;\n  }\n`\nkeyframes({\n  from: {\n    backgroundColor: \"red\"\n  },\n  to: {\n    backgroundColor: \"blue\"\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "background-color",
                            value: "red",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "to": [
                        ExtractStaticStyle {
                            property: "background-color",
                            value: "blue",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n\"a\";\n\"a\";\n\"a\";\n",
}
